--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -49,6 +49,7 @@
     bottom: $spacer;
     position: absolute;
     padding: $space-md 0 $space-md 0;
+    z-index: 1;
   }
 }
 
@@ -56,6 +57,18 @@
   .login-page {
     .footer {
       padding: 70px 0 $space-md 0;
+    }
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .login-page {
+    .footer {
+      bottom: 0;
+
+      li {
+        line-height: 1.8rem;
+      }
     }
   }
 }
